<resources>
    <string name="app_name">KotlinAndroid</string>
    <string name="empty">暂无数据</string>
    <string name="retry">点击重试</string>

    <string name="account">账号</string>
    <string name="account_hint">请输入账号</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="re_password_hint">请输入确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_register">去注册</string>
    <string name="go_login">去登录</string>

    <string name="tab_home">首页</string>
    <string name="tab_classify">分类</string>
    <string name="tab_collect">收藏</string>
    <string name="tab_mine">我的</string>

    <string name="tab_structure">体系</string>
    <string name="tab_nav">导航</string>

</resources>